# zoo-demo

./: CMakeLists.txt  README.md
plugins/: CMakeLists.txt
plugins/ctk_flight_control_ui/: CMakeLists.txt  DeviceMarkPanel.cpp  DeviceMarkPanel.h  DeviceMarkPanel.ui  DeviceStatePanel.cpp  DeviceStatePanel.h  DeviceStatePanel.ui  EngineSystemPanel.cpp  EngineSystemPanel.h  EngineSystemPanel.ui  FlightParamPanel.cpp  FlightParamPanel.h  FlightParamPanel.ui  FlightViewPanel.cpp  FlightViewPanel.h  FlightViewPanel.ui  FlightVisualWgt.cpp  FlightVisualWgt.h  FlyingControlPanel.cpp  FlyingControlPanel.h  FlyingControlPanel.ui  FullScreenPanel.cpp  FullScreenPanel.h  FullScreenPanel.ui  GroundCheckPanel.cpp  GroundCheckPanel.h  GroundCheckPanel.ui  LinkMonitorPanel.cpp  LinkMonitorPanel.h  LinkMonitorPanel.ui  LogRecordWgt.cpp  LogRecordWgt.h  LogRecordWgt.ui  Main.cpp  MainViewPanel.cpp  MainViewPanel.h  MainViewPanel.ui  MainWindow.cpp  MainWindow.h  MainWindow.qrc  (+37 more)
plugins/ctk_flight_control_ui/Resources/qss/: black.qss
plugins/ctk_war_demo/: CMakeLists.txt  DemoActivator.cpp  DemoActivator.h  VisualDemo.cpp  VisualDemo.h  manifest_headers.cmake
plugins/zooCmd_osg-fc/: BirdEyeManipulator.cpp  BirdEyeManipulator.h  CMakeLists.txt  FlightCtrlCmd.cpp  FlightCtrlCmd.h
tools/: order_for_goods.py  zoo-demo-file-copy.bat
